--- a/src/components/LanguageOptions/LanguageOptions.css
+++ b/src/components/LanguageOptions/LanguageOptions.css
@@ -18,10 +18,11 @@
 @media screen and (max-width: 700px) {
   .language-options {
     font-size: 10px;
+    display: none;
   }
 }
 @media screen and (max-width: 430px) {
   .language-options {
-    font-size: 8px;
+  font-size: 7px;
   }
 }
